done some clients chages

--- a/style.css
+++ b/style.css
@@ -31,11 +31,8 @@ h6 {
 body {
     font-size: 14px;
     font-family: 'Roboto', sans-serif; /* FF3.6-15 */
-    background: -webkit-linear-gradient(#174c9a 0%, #2257a5 40%, #2961ae 63%, #2c5fae 64%, #2d62b2 68%, #2d62b0 70%, #2e63b3 70%, #2e63b1 72%, #2f64b4 73%, #2f64b2 75%, #3065b5 75%, #3065b3 77%, #3166b6 78%, #3166b4 80%, #3267b7 80%, #3267b5 82%, #3368b8 83%, #3368b6 85%, #3469b9 85%, #3469b9 86%, #326ab7 86%, #3568b7 87%, #3469b7 87%, #356aba 87%, #356aba 89%, #336bb8 89%, #366bbb 90%, #366bb9 92%, #376cbc 92%, #396ebe 100%);
-    background: -o-linear-gradient(#174c9a 0%, #2257a5 40%, #2961ae 63%, #2c5fae 64%, #2d62b2 68%, #2d62b0 70%, #2e63b3 70%, #2e63b1 72%, #2f64b4 73%, #2f64b2 75%, #3065b5 75%, #3065b3 77%, #3166b6 78%, #3166b4 80%, #3267b7 80%, #3267b5 82%, #3368b8 83%, #3368b6 85%, #3469b9 85%, #3469b9 86%, #326ab7 86%, #3568b7 87%, #3469b7 87%, #356aba 87%, #356aba 89%, #336bb8 89%, #366bbb 90%, #366bb9 92%, #376cbc 92%, #396ebe 100%);
-    background: linear-gradient(#174c9a 0%, #2257a5 40%, #2961ae 63%, #2c5fae 64%, #2d62b2 68%, #2d62b0 70%, #2e63b3 70%, #2e63b1 72%, #2f64b4 73%, #2f64b2 75%, #3065b5 75%, #3065b3 77%, #3166b6 78%, #3166b4 80%, #3267b7 80%, #3267b5 82%, #3368b8 83%, #3368b6 85%, #3469b9 85%, #3469b9 86%, #326ab7 86%, #3568b7 87%, #3469b7 87%, #356aba 87%, #356aba 89%, #336bb8 89%, #366bbb 90%, #366bb9 92%, #376cbc 92%, #396ebe 100%); 
+    background-color: #2359A6;
 }           
-
 
 
 
