make some changes

--- a/style.css
+++ b/style.css
@@ -223,7 +223,7 @@ ul.rap-board-list {
     margin-left: -40px;
 }
 .rap-board-list li {
-    margin: 25px 0 25px 40px;
+    margin: 12px 0 12px 40px;
     width: 91px;
     cursor: pointer;
 }
@@ -236,7 +236,7 @@ ul.rap-board-list {
 .rap-board-list li img:hover {
     filter: none;
     -webkit-filter: grayscale(0);
-    -webkit-transform: scale(1.01);
+    -webkit-transform: scale(1);
 }
 .rap-board-list .tooltip-inner {
     padding: 5px 20px;
@@ -267,4 +267,15 @@ ul.rap-board-list {
 /* ===========  Archive Styles  =========== */
 .archive-content-wrap {
     padding: 45px 0;
+}
+
+
+.rapper + .tooltip > .tooltip-inner {
+    background-color: #fff; 
+    color: #111; 
+    border-radius: 15px;
+}
+/* Tooltip on top */
+.rapper + .tooltip.top > .tooltip-arrow {
+    border-top: 5px solid #fff;
 }
